Fixing the bug of map not showing properly

--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -1,9 +1,4 @@
-.map-container {
-    height: 400px;
-    width: 800px;
-}
-
 .leaflet-container {
-    height: 400px;
+    height: 650px;
     width: 800px;
 }
